# hclib

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
examples/: CMakeLists.txt  list.c
include/hclib/: hc_allocator.h  hc_def.h  hc_destructor.h  hc_list.h  hc_macros.h
src/: hc_list.c  memory.h
